tests/ui/typeck/conversion/function_type_pure_payable.sol
//@compile-flags: -Ztypeck
contract C {
    function h() pure external {
    }
    function f() view external returns (bytes4) {
        function () payable external g = this.h; //~ ERROR: mismatched types
        return g.selector;
    }
}
